--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>S-Paribahan</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.10.1/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <header>
+    <header class="">
         <!--Navbar section -->
-        <nav class="navbar bg-base-100 w-[1170px] container mx-auto">
+        <nav class="navbar bg-base-100 container mx-auto lg:w-[1170px]">
             <div class="navbar-start">
               <div class="dropdown">
                 <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -23,7 +24,7 @@
                   <li><a>Search</a></li>
                 </ul>
               </div>
-              <a class="btn btn-ghost text-xl">daisyUI</a>
+              <a class="btn btn-ghost text-xl">E-Ticket</a>
             </div>
             <div class="navbar-center hidden lg:flex">
               <ul class="menu menu-horizontal px-1">
@@ -34,12 +35,56 @@
               </ul>
             </div>
             <div class="navbar-end">
-              <a class="btn">Button</a>
+              <a class="btn">
+                Bus
+                <img src="./images/bus-icon.png" alt="">
+            </a>
             </div>
         </nav>
+
+        <!-- banner hero section -->
+        <section class="banner-section container mx-auto lg:w-[1167px] mt-7">
+            <div class="relative h-[550px] bg-cover bg-center flex justify-center" style="background-image: url('./images/banner.png')">
+                <div class="text-center w-3/5 py-16">
+                    <h1 class="lg:text-6xl font-bold text-white mb-4">Enjoyable Travel With</h1>
+                    <h1 class="lg:text-6xl font-bold text-white mb-4 green-title">S-Paribahan</h1>
+                    <p class="mt-4 text-lg text-white mb-8">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
+                    <a class="btn font-bold border-none px-5" href="">Buy Tickets</a>
+                </div>
+            </div>
+            <div class="lg:relative block lg:flex justify-center bottom-20 card-items">
+                <div class="lg:w-3/12 h-40 mr-5 px-10 py-8 flex bg-white banner-card sm:mb-5">
+                    <div>
+                        <img src="./images/people.png" alt="">
+                    </div>
+                    <div>
+                        <h2 class="text-3xl font-bold">500K+</h2>
+                        <p class="text-gray-400	">Registered Users</p>
+                    </div>
+                </div>
+                <div class="lg:w-3/12 h-40 mr-5 px-10 py-8 flex banner-card bg-white sm:mb-5">
+                    <div>
+                        <img src="./images/people.png" alt="">
+                    </div>
+                    <div>
+                        <h2 class="text-3xl font-bold">1.7 lacks</h2>
+                        <p class="text-gray-400	">Tickets sold</p>
+                    </div>
+                </div>
+                <div class="lg:w-3/12 h-40 px-10 py-8 flex banner-card bg-white">
+                    <div>
+                        <img src="./images/people.png" alt="">
+                    </div>
+                    <div>
+                        <h2 class="text-3xl font-bold">80K+</h2>
+                        <p class="text-gray-400	">Rental Partner</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </header>
     <main>
-
+        <!-- <h1>Look Mama</h1> -->
     </main>
     <footer>
 
