seat booking design almost done

--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
                             <p>Departure Time</p>
                             <p>9:00 PM</p>
                         </div>
-                        <div class="mt-6 flex flex-wrap lg:gap-2">
-                            <a href="" class="btn w-56 ">Boarding Point - Laxmipur</a>
-                            <a href="" class="btn w-56 ">Dropping Point - Bogura</a>
+                        <div class="mt-6 flex flex-wrap">
+                            <a href="" class="btn w-56 mb-2 me-2">Boarding Point - Laxmipur</a>
+                            <a href="" class="btn w-56 mb-2 me-2">Dropping Point - Bogura</a>
                             <a href="" class="btn w-56">Est. Time - 11 Hour</a>
                         </div>
                     </div>  
@@ -207,7 +207,98 @@
                     </div>
                 </div>
             </div>
-            <h1>Look</h1>
+
+            <div class="booking-seat-section bg-white mt-6 lg:w-[1165px] mx-auto container rounded-3xl p-6">
+                <div class="lg:flex">
+                    <div class="lg:w-[672px] display-seat pe-8">
+                        <h1 class="mt-2">Select Your Seat</h1>
+                        <div class="flex justify-between availibility-border mt-5 py-4">
+                            <div class="flex">
+                                <img src="./images/seat-gray.png" alt="" class="me-2">
+                                <p>Available</p>
+                            </div>
+                            <div class="flex">
+                                <img src="./images/seat-green-filled.png" alt="" class="me-2">
+                                <p>Selected</p>
+                            </div>
+                        </div>
+                        <div class="mt-6 flex justify-end ">
+                            <div class="px-10 py-4 bg-[#0307121a] rounded-xl">
+                                <img class="w-6 h-6" src="./images/steering-wheel.png" alt="">
+                            </div>
+                        </div>
+                        <!--seat design-->
+                        <div class="grid grid-cols-5 gap-5">
+                            <!-- Row A -->
+                            <div class="w-7">A</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">A1</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">A2</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">A3</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">A4</div>
+                            <!-- Row B -->
+                            <div class="w-7">B</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">B1</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">B2</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">B3</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">B4</div>
+                            <!-- Row C -->
+                            <div class="w-7">C</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">C1</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">C2</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">C3</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">C4</div>
+                            <!-- Row D -->
+                            <div class="w-7">D</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">D1</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">D2</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">D3</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">D4</div>
+                            <!-- Row E -->
+                            <div class="w-7">E</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">E1</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">E2</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">E3</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">E4</div>
+                            
+                            <!-- Row F -->
+                            <div class="w-7">F</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">F1</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">F2</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">F3</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">F4</div>
+                           
+                            <!-- Row G -->
+                            <div class="w-7">G</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">G1</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">G2</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">G3</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">G4</div>
+                            <!-- Row H -->
+                            <div class="w-7">H</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">H1</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">H2</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">H3</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">H4</div>
+
+                            <div class="w-7">I</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">I1</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">I2</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">I3</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">I4</div>
+
+                            <div class="w-7">J</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">J1</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">J2</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">J3</div>
+                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">J4</div>
+                        </div>
+                    </div>
+                    <div class="lg:w-[493px] ps-5">
+                        <h1>Select Your Seat</h1>
+                    </div>
+                </div>
+            </div>
+
        </section>
 
     </main>
