without footer all done

--- a/index.html
+++ b/index.html
@@ -222,79 +222,162 @@
                                 <p>Selected</p>
                             </div>
                         </div>
-                        <div class="mt-6 flex justify-end ">
-                            <div class="px-10 py-4 bg-[#0307121a] rounded-xl">
-                                <img class="w-6 h-6" src="./images/steering-wheel.png" alt="">
+                        <div class="mt-6 flex justify-end  mb-4">
+                            <div class="px-9 py-4 bg-[#0307121a] rounded-xl">
+                                <img class="w-5 h-5" src="./images/steering-wheel.png" alt="">
                             </div>
                         </div>
                         <!--seat design-->
-                        <div class="grid grid-cols-5 gap-5">
+                        <div class="seat-design">
                             <!-- Row A -->
-                            <div class="w-7">A</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">A1</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">A2</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">A3</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">A4</div>
+                            <div class="grid-item py-4 mb-6">A</div>
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:ms-2 lg:ms-4 sm:me-2 lg:me-8 mb-6">A1</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-4 lg:me-16 mb-6">A2</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-2 lg:me-8 mb-6">A3</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item mb-6">A4</div>
                             <!-- Row B -->
-                            <div class="w-7">B</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">B1</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">B2</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">B3</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">B4</div>
+                            <div class="grid-item py-4 mb-6">B</div>
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:ms-2 lg:ms-4 sm:me-2 lg:me-8 mb-6">B1</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-4 lg:me-16 mb-6">B2</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-2 lg:me-8 mb-6">B3</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item mb-6">B4</div>
                             <!-- Row C -->
-                            <div class="w-7">C</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">C1</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">C2</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">C3</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">C4</div>
+                            <div class="grid-item py-4 mb-6">C</div>
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:ms-2 lg:ms-4 sm:me-2 lg:me-8 mb-6">C1</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-4 lg:me-16 mb-6">C2</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-2 lg:me-8 mb-6">C3</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item mb-6">C4</div>
                             <!-- Row D -->
-                            <div class="w-7">D</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">D1</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">D2</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">D3</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">D4</div>
+                            <div class="grid-item py-4 mb-6">D</div>
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:ms-2 lg:ms-4 sm:me-2 lg:me-8 mb-6">D1</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-4 lg:me-16 mb-6">D2</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-2 lg:me-8 mb-6">D3</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item mb-6">D4</div>
                             <!-- Row E -->
-                            <div class="w-7">E</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">E1</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">E2</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">E3</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">E4</div>
+                            <div class="grid-item py-4 mb-6">E</div>
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:ms-2 lg:ms-4 sm:me-2 lg:me-8 mb-6">E1</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-4 lg:me-16 mb-6">E2</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-2 lg:me-8 mb-6">E3</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item mb-6">E4</div>
                             
                             <!-- Row F -->
-                            <div class="w-7">F</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">F1</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">F2</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">F3</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">F4</div>
+                            <div class="grid-item py-4 mb-6">F</div>
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:ms-2 lg:ms-4 sm:me-2 lg:me-8 mb-6">F1</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-4 lg:me-16 mb-6">F2</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-2 lg:me-8 mb-6">F3</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item mb-6">F4</div>
                            
                             <!-- Row G -->
-                            <div class="w-7">G</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">G1</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">G2</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">G3</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">G4</div>
+                            <div class="grid-item py-4 mb-6">G</div>
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:ms-2 lg:ms-4 sm:me-2 lg:me-8 mb-6">G1</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-4 lg:me-16 mb-6">G2</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-2 lg:me-8 mb-6">G3</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item mb-6">G4</div>
                             <!-- Row H -->
-                            <div class="w-7">H</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">H1</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">H2</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">H3</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">H4</div>
+                            <div class="grid-item py-4 mb-6">H</div>
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:ms-2 lg:ms-4 sm:me-2 lg:me-8 mb-6">H1</div>
 
-                            <div class="w-7">I</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">I1</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">I2</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">I3</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">I4</div>
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-4 lg:me-16 mb-6">H2</div>
 
-                            <div class="w-7">J</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">J1</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">J2</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">J3</div>
-                            <div class="bg-[#F7F8F8] px-10 py-4 rounded-xl mb-6 my-seat">J4</div>
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-2 lg:me-8 mb-6">H3</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item mb-6">H4</div>
+                            <!-- Row I -->
+                            <div class="grid-item py-4 mb-6">I</div>
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:ms-2 lg:ms-4 sm:me-2 lg:me-8 mb-6">I1</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-4 lg:me-16 mb-6">I2</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-2 lg:me-8 mb-6">I3</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item mb-6">I4</div>
+                            <!--ROW J-->
+                            <div class="grid-item py-4 mb-6">J</div>
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:ms-2 lg:ms-4 sm:me-2 lg:me-8 mb-6">J1</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-4 lg:me-16 mb-6">J2</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item sm:me-2 lg:me-8 mb-6">J3</div>
+
+                            <div class="bg-[#F7F8F8] text-center py-4 rounded-xl grid-item mb-6">J4</div>
                         </div>
                     </div>
                     <div class="lg:w-[493px] ps-5">
-                        <h1>Select Your Seat</h1>
+                        <h1 class="pb-6 select-seat-border">Select Your Seat</h1>
+
+                        <div class="bg-[#F7F8F8] rounded-xl mt-6 p-8">
+                            <div class="overflow-x-auto">
+                                <table class="table">
+                                  <!-- head -->
+                                  <thead>
+                                    <tr>
+                                      <th>Seat</th>
+                                      <th>Class</th>
+                                      <th>Price</th>
+                                    </tr>
+                                  </thead>
+                                  <tbody>
+                                    <!-- row 1 -->
+                                    <tr>
+                                      <td>C1</td>
+                                      <td>Economic</td>
+                                      <td>550</td>
+                                    </tr>
+                                    <tr>
+                                        <td>C1</td>
+                                        <td>Economic</td>
+                                        <td>550</td>
+                                      </tr>
+                                  </tbody>
+                                </table>
+                                <div class="flex justify-between lg:w-[365px] ps-3 pe-4 price-border ms-1 mb-4">
+                                    <h3 class="">Total Price</h1>
+                                    <h3 class="me-6">BDT 1100</p>
+                                  </div>
+                              </div>
+                              <label class="input input-bordered flex items-center gap-2 mx-2">
+                                <input type="text" class="grow w-full" placeholder="Have any copupon?" />
+                                <span class="badge badge-info bg-[#1DD100] rounded-lg px-5 py-3 w-20 h-10">Apply</span>
+                              </label>
+                              <div class="flex justify-between ps-3 pe-6 ms-1 mt-6">
+                                <h3 class="">Grand Total</h3>
+                                <h3 class="me-7">BDT 1100</h3>
+                              </div>
+                        </div>
+                        <form action="" class="mt-6">
+                            <label for="" class="font-bold">Passenger name *</label>
+                            <input type="text" placeholder="Enter Your Name" class="input input-bordered w-full my-6" />
+                            <label for="" class="font-bold">Phone Number *</label>
+                            <input type="number" placeholder="Enter Your Phone Number" class="input input-bordered w-full my-6" />
+                            <label for="" class="font-bold">Email Id</label>
+                            <input type="email" placeholder="Enter Your Email Id" class="input input-bordered w-full my-6" />
+                            <button class="btn w-full bg-[#1DD100] text-white">Next</button>
+                        </form>
+                        <div class="flex sm:flex-wrap gap-11 ms-10 me-10 mt-6">
+                            <p>Terms and Conditions</p>
+                            <p>Cancelation Policy</p>
+                        </div>
                     </div>
                 </div>
             </div>
