--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         </div>
                         <a href="" class="btn bg-lime-200">
                             <img src="./images/seat-green.png" alt="">
-                            40 seats left
+                            <span id="seats-rem">40</span> seats left
                         </a>
                     </div>
                     <div class="p-8 bg-[#F7F8F8] rounded-3xl mt-5">
@@ -332,48 +332,68 @@
                                   <!-- head -->
                                   <thead>
                                     <tr>
-                                      <th>Seat</th>
+                                      <th>Seat <span id="confirm-seat-count" class="bg-[#1DD100] px-2 py-1">0</span></th>
                                       <th>Class</th>
                                       <th>Price</th>
                                     </tr>
                                   </thead>
-                                  <tbody>
-                                    <!-- row 1 -->
-                                    <tr>
-                                      <td>C1</td>
-                                      <td>Economic</td>
-                                      <td>550</td>
-                                    </tr>
-                                    <tr>
-                                        <td>C1</td>
-                                        <td>Economic</td>
-                                        <td>550</td>
-                                      </tr>
+                                  <tbody id="table-body">
+
                                   </tbody>
                                 </table>
-                                <div class="flex justify-between lg:w-[365px] ps-3 pe-4 price-border ms-1 mb-4">
-                                    <h3 class="">Total Price</h1>
-                                    <h3 class="me-6">BDT 1100</p>
-                                  </div>
+                                <div id="total-and-discount">
+                                    <div class="flex justify-between lg:w-[365px] ps-3 pe-4 price-border ms-1 mb-4">
+                                        <h3 class="">Total Price</h1>
+                                        <h3 class="me-6">BDT <span id="total-price">0</span></p>
+                                      </div>
+
+                                </div>
                               </div>
-                              <label class="input input-bordered flex items-center gap-2 mx-2">
-                                <input type="text" class="grow w-full" placeholder="Have any copupon?" />
-                                <span class="badge badge-info bg-[#1DD100] rounded-lg px-5 py-3 w-20 h-10">Apply</span>
-                              </label>
+                              <div id="coupon" class="hidden">
+                                <label class="input input-bordered flex items-center gap-2 mx-2">
+                                    <input id="coupon-input" type="text" class="grow w-full" placeholder="Have any copupon?" />
+                                    <span class="badge badge-info bg-[#1DD100] rounded-lg px-5 py-3 w-20 h-10" id="apply-btn">Apply</span>
+                                  </label>
+                              </div>
                               <div class="flex justify-between ps-3 pe-6 ms-1 mt-6">
                                 <h3 class="">Grand Total</h3>
-                                <h3 class="me-7">BDT 1100</h3>
+                                <h3 class="me-7">BDT <span id="grand-total"></span></h3>
                               </div>
                         </div>
-                        <form action="" class="mt-6">
+                        <!-- form start -->
+                        <div action="" class="mt-6">
                             <label for="" class="font-bold">Passenger name *</label>
                             <input type="text" placeholder="Enter Your Name" class="input input-bordered w-full my-6" />
                             <label for="" class="font-bold">Phone Number *</label>
-                            <input type="number" placeholder="Enter Your Phone Number" class="input input-bordered w-full my-6" />
+                            <input type="number" id="phone-number" placeholder="Enter Your Phone Number" class="input input-bordered w-full my-6" />
                             <label for="" class="font-bold">Email Id</label>
                             <input type="email" placeholder="Enter Your Email Id" class="input input-bordered w-full my-6" />
-                            <button class="btn w-full bg-[#1DD100] text-white">Next</button>
-                        </form>
+                            
+                            <button onclick="my_modal_1.showModal()" class="btn w-full bg-[#1DD100] text-white" id="next-btn" disabled>Next</button>
+
+                            <dialog id="my_modal_1" class="modal">
+                                <div class="modal-box">
+                                  <div class="flex justify-center">
+                                    <img class="" src="./images/success.png" alt="">
+                                  </div>
+                                  <div class="mt-5">
+                                    <h3 class="text-center text-emerald-700 mb-2">SUCCESS</h3>
+                                    <h3 class="text-center font-bold">Thank you for Booking Our Bus Seats. 
+                                    </h3>
+                                    <h3 class="text-center font-bold"> We are working hard to find the best service and deals for you. 
+                                        </h3>
+                                        <p class="text-current text-center">Shortly you will find a confirmation in your email.</p>
+                                  </div>
+                                  <div class="modal-action">
+                                    <form method="dialog" style="display:flex;justify-content:center;">
+                                      <!-- if there is a button in form, it will close the modal -->
+                                        <button class="btn">Continue</button>
+                                    </form>
+                                  </div>
+                                </div>
+                              </dialog>
+                            </div>
+                            <!-- form end -->
                         <div class="flex sm:flex-wrap gap-11 ms-10 me-10 mt-6">
                             <p>Terms and Conditions</p>
                             <p>Cancelation Policy</p>
@@ -388,5 +408,7 @@
     <footer>
         
     </footer>
+
+    <script src="./js/index.js"></script>
 </body>
 </html>
