--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
             </div>
         </section>
     </header>
+
+
     <main>
 
-       <section class="best-offer-section mt-5 container mx-auto lg:w-[1165px] mb-5">
+       <section class="best-offer-section mt-5 container mx-auto lg:w-[1165px]">
         <h1 class="text-4xl font-bold text-center">Best offers for you</h1>
         <div class="lg:flex lg:gap-6 md:flex md:justify-center">
             <div class="offers-card sm:w-5/12 lg:w-[565px] sm:mb h-56 bg-yellow-400 flex">
@@ -223,7 +225,7 @@
                             </div>
                         </div>
                         <div class="mt-6 flex justify-end  mb-4">
-                            <div class="px-9 py-4 bg-[#0307121a] rounded-xl">
+                            <div class="px-9 py-4 bg-[#0307121a] rounded-xl w-28">
                                 <img class="w-5 h-5" src="./images/steering-wheel.png" alt="">
                             </div>
                         </div>
@@ -332,7 +334,7 @@
                                   <!-- head -->
                                   <thead>
                                     <tr>
-                                      <th>Seat <span id="confirm-seat-count" class="bg-[#1DD100] px-2 py-1">0</span></th>
+                                      <th>Seat <span id="confirm-seat-count" class="bg-[#1DD100] px-2 rounded">0</span></th>
                                       <th>Class</th>
                                       <th>Price</th>
                                     </tr>
@@ -393,6 +395,7 @@
                                 </div>
                               </dialog>
                             </div>
+                
                             <!-- form end -->
                         <div class="flex sm:flex-wrap gap-11 ms-10 me-10 mt-6">
                             <p>Terms and Conditions</p>
